--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
+        "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
